@@ -1,4 +1,3 @@
-#include "Utilities/Configuration/interface/Architecture.h"
 #include "Utilities/StorageFactory/interface/StorageFactory.h"
 #include "Utilities/StorageFactory/interface/StorageAccount.h"
 #include "PluginManager/PluginManager.h"
